--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
   },
   "dependencies": {
     "expo": "~40.0.0",
+    "expo-location": "~10.0.0",
     "expo-status-bar": "~1.0.3",
+    "expo-task-manager": "~8.6.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-geocode": "^0.2.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-web": "~0.13.12",
-    "expo-location": "~10.0.0",
-    "expo-task-manager": "~8.6.0"
+    "react-native-maps": "0.27.1",
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
